<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/tv_header_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/yyh_back"
        android:drawablePadding="10dp"
        android:paddingTop="10dp"
        android:text="注册"
        android:textColor="@color/yyh_gray_dark"
        android:textSize="17dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

<!--            <com.appchina.usersdk.WidgetSetPasswordLayout
                android:id="@+id/set_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />-->

            <EditText
                android:layout_marginTop="5dp"
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/yyh_edittext_bg"
                android:hint="@string/dialog_login_name_hint"
                android:inputType="phone"
                android:textSize="14dp" />

            <RelativeLayout
                android:id="@+id/username_container"
                android:layout_width="match_parent"
                android:layout_height="44dp" >
                <EditText
                    android:id="@+id/verifyCode"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/yyh_edittext_bg"
                    android:hint="@string/dialog_login_code_hint"
                    android:inputType="phone"
                    android:textSize="14dp" />

                <Button
                    android:layout_margin="5dp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:id="@+id/btn_code"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/yyh_btn_blue_bg"
                    android:text="获取验证码"
                    android:textColor="@color/yyh_white"
                    android:textSize="13dp" />

            </RelativeLayout>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/yyh_edittext_bg"
                android:hint="@string/dialog_login_password_hint"
                android:inputType="textPassword"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/password_temp"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/yyh_edittext_bg"
                android:hint="@string/dialog_login_password_temp_hint"
                android:inputType="textPassword"
                android:textSize="14dp" />

            <Button
                android:id="@+id/btn_regist"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/yyh_btn_blue_bg"
                android:text="注册"
                android:textColor="@color/yyh_white"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tv_registration_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingTop="10dp"
                android:text="@string/dialog_login_agreement"
                android:textSize="11dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>