<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp" >

    <TextView
        android:id="@+id/tv_header_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/yyh_back"
        android:drawablePadding="10dp"
        android:paddingTop="10dp"
        android:text="找回密码"
        android:textColor="@color/yyh_gray_dark"
        android:textSize="17dp" />

    <RadioGroup
        android:visibility="gone"
        android:id="@+id/rg_retrieve_way"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/yyh_blue_frame_bg"
        android:orientation="horizontal"
        android:padding="0.75dp" >

        <RadioButton
            android:id="@+id/rb_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/yyh_redio_btn_blue_left"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="手机号"
            android:textColor="@color/yyh_text_selector_blue_white" />

        <RadioButton
            android:id="@+id/rb_mail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/yyh_redio_btn_blue_right"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="邮箱"
            android:textColor="@color/yyh_text_selector_blue_white" />
    </RadioGroup>

<!--    <com.appchina.usersdk.WidgetSetPasswordLayout
        android:id="@+id/set_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" />-->

    <EditText
        android:layout_marginTop="5dp"
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/yyh_edittext_bg"
        android:hint="@string/dialog_login_name_hint"
        android:inputType="phone"
        android:textSize="14dp" />

    <RelativeLayout
        android:id="@+id/username_container"
        android:layout_width="match_parent"
        android:layout_height="44dp" >
        <EditText
            android:id="@+id/verifyCode"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/yyh_edittext_bg"
            android:hint="@string/dialog_login_code_hint"
            android:inputType="phone"
            android:textSize="14dp" />

        <Button
            android:layout_margin="5dp"
            android:id="@+id/btn_code"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/yyh_btn_blue_bg"
            android:text="获取验证码"
            android:textColor="@color/yyh_white"
            android:textSize="13dp" />

    </RelativeLayout>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/yyh_edittext_bg"
        android:hint="@string/dialog_login_password_hint"
        android:inputType="textPassword"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/password_temp"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/yyh_edittext_bg"
        android:hint="@string/dialog_login_password_temp_hint"
        android:inputType="textPassword"
        android:textSize="14dp" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/yyh_btn_blue_bg"
        android:maxWidth="300dp"
        android:text="确认"
        android:textColor="@color/yyh_white"
        android:textSize="14dp" />

</LinearLayout>